Add executable for main file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ cmake_minimum_required (VERSION 2.6)
 project (NeuralNetworkPathfinding)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-add_library(nnpflib nnpf.h domain.cpp)
+add_library(nnpflib nnpf.h main.cpp)
+add_library(domlib dom.h domain.cpp)
 
 #add_library(celllib cells.h average_cell_centers.c)
 #target_compile_features(celllib PUBLIC c_std_99)
@@ -13,5 +14,11 @@ add_library(nnpflib nnpf.h domain.cpp)
 #add_executable(average average.c)
 #add_executable(integration integration.c)
 
-add_executable(domaintest domain.cpp)
-target_link_libraries(domaintest nnpflib)
+#add_executable(domaintest domain.cpp)
+#target_link_libraries(domaintest nnpflib)
+
+add_executable(create_domain create_domain.cpp)
+target_link_libraries(create_domain domlib)
+
+add_executable(pathfinder main.cpp)
+target_link_libraries(pathfinder domlib nnpflib)
